updates deps, improved zebra styles

--- a/data-grid.scss
+++ b/data-grid.scss
@@ -1,6 +1,6 @@
-@import "scss/_core";
-@import "scss/_rtl";
-@import "scss/_menu";
-@import "scss/_actions";
-@import "scss/_resizer";
-@import "scss/_responsive";
+@use "scss/_core";
+@use "scss/_rtl";
+@use "scss/_menu";
+@use "scss/_actions";
+@use "scss/_resizer";
+@use "scss/_responsive";
