Enhanced logging, UI adjustments, and event handling.
- Added `rowRendered` event for table row rendering.
- Adjusted button `margin-left` in `_actions.scss`.
- Commented out `min-width` in `_core.scss` to fix layout issues.
- Changed `log` method in `base-element.js` to accept an array.
- Wrapped `loadData` method call in `DataGrid` and `SaveState` with `setTimeout` for plugin readiness.
- Added detailed logging in `DataGrid` methods.
- Improved logging and state handling in `SaveState` class.

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1,5 +1,5 @@
 /**
- * Data Grid Web Component v2.0.11
+ * Data Grid Web Component v2.0.12
  * https://github.com/lekoala/data-grid
  */
 
@@ -472,7 +472,7 @@ data-grid {
     .dg-page-nav {
       display: flex;
       align-items: center;
-      min-width: 160px;
+      /*min-width: 160px;*/
     }
 
     .dg-input-page {
@@ -499,7 +499,7 @@ data-grid {
 
     .dg-meta {
       // Prevent layout from jumping around
-      min-width: 160px;
+      /*min-width: 160px;*/
       text-align: right;
     }
 
